[gd_scene load_steps=12 format=2]

[ext_resource path="res://enemy/hydra/hydra_head.gd" type="Script" id=1]
[ext_resource path="res://enemy/sprites/Hydra_front_attack.png" type="Texture" id=2]
[ext_resource path="res://enemy/sprites/Hydra_front_hit.png" type="Texture" id=3]
[ext_resource path="res://enemy/sprites/Hydra_front_down.png" type="Texture" id=4]
[ext_resource path="res://enemy/sprites/Hydra_front_up.png" type="Texture" id=5]
[ext_resource path="res://interface/gui_boss.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 317.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=17]
radius = 193.21

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ null ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[node name="Hydra_head" type="KinematicBody2D"]
position = Vector2( 100, 100 )
collision_layer = 4
collision_mask = 14
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -26, 8, -15, 26, -6, 45, 6, 45, 19, 24, 26, 8, 34, 1, 40, -10, 39, -21, 38, -34, 26, -45, 10, -56, -14, -55, -28, -42, -38, -30, -36, -13, -31, -1 )

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.74845e-07 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="FiringRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FiringRange"]
shape = SubResource( 17 )

[node name="Shadow" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, 20 )
scale = Vector2( 3, 3 )
frames = SubResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.984314, 0.984314, 0.984314, 1 )
position = Vector2( 0, -12 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 18 )
animation = "hurt"
playing = true

[node name="Timer" type="Timer" parent="."]

[node name="Timer_anim_hurt" type="Timer" parent="."]
wait_time = 0.35

[node name="Timer_anim_attack" type="Timer" parent="."]
wait_time = 0.25

[node name="TimerKnockback" type="Timer" parent="."]
wait_time = 0.35

[node name="CanvasLayer" parent="." instance=ExtResource( 6 )]

[connection signal="healthChanged" from="." to="." method="_on_EnemyRange_healthChanged"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_entered" from="FiringRange" to="." method="_on_FiringRange_body_entered"]
[connection signal="body_exited" from="FiringRange" to="." method="_on_FiringRange_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_anim_hurt" to="." method="_on_Timer_anim_hurt_timeout"]
[connection signal="timeout" from="Timer_anim_attack" to="." method="_on_Timer_anim_attack_timeout"]
[connection signal="timeout" from="TimerKnockback" to="." method="_on_TimerKnockback_timeout"]
